--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		
              <div class="col-md-offset-4 col-md-4">
 			 
-			   <form method="POST" action="{{ url_for('page') }}" autocomplete="off">
+			   <form method="POST" action=" " autocomplete="off">
 			   
                   <div class="form-group">
                        <label for="height">Height:</label>
